io-takamaka-examples/src/main/java/io/takamaka/tests/errors/inconsistententry1/Super.java
package io.takamaka.tests.errors.inconsistententry1;

import io.takamaka.code.lang.Contract;

public class Super extends Contract {
	public void m() {}
}